--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   cached_network_image: 2.2.0+1
   flutter_spinkit: 4.1.2+1
   flutter_icons: 1.1.0
+  material_design_icons_flutter: ^4.0.5555
+
   #NETWORK
   dio: 3.0.10
   connectivity: 0.4.9
@@ -37,6 +39,7 @@ dependencies:
   bubble_tab_indicator: 0.1.4
   flutter_linkify: 3.1.3
   shimmer: 1.1.1
+  qr_code_scanner: ^0.0.13
 
 # DEVELOPER DEPENDENCIES
 dev_dependencies:
@@ -65,3 +68,8 @@ flutter:
     # GENERIC IMAGE ASSETS
     - assets/
     - assets/images/
+
+  fonts:
+    - family: RVIcons
+      fonts:
+        - asset: assets/icons/RVIcons.ttf
